--- a/src/components/controls3d/partials/controls3d.html
+++ b/src/components/controls3d/partials/controls3d.html
@@ -25,11 +25,11 @@
     <i class="fa fa-ga-right-arrow"></i>
   </button>
 </div>
-<div class="ga-pegman-help" ng-show="fps.active">
+<!--div class="ga-pegman-help" ng-show="fps.active">
   pegman help text here.
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
   eiusmod tempor incididunt ut labore et dolore magna aliqua.
   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
   nisi ut aliquip ex ea commodo consequat.
-</div>
+</div-->
 <div ga-help="28"></div>
