--- a/src/style/app.less
+++ b/src/style/app.less
@@ -12,8 +12,7 @@
 @import "../components/contextpopup/style/contextpopup.less";
 @import "../components/feedback/style/feedback.less";
 @import "../components/topic/style/topic.less";
-@import "../components/importkml/style/importkml.less";
-@import "../components/importwms/style/importwms.less";
+@import "../components/import/style/import.less";
 @import "../components/popup/style/popup.less";
 @import "../components/profile/style/profile.less";
 @import "../components/catalogtree/style/catalogtree.less";
@@ -1152,7 +1151,7 @@ a .ga-icon-separator {
 }
 
 // ****** POPUP
-#import-wms-popup, #import-kml-popup, #measure-popup, #draw-popup,
+#import-popup, #measure-popup, #draw-popup,
 #featuretree-popup {
   .panel-heading {
     display: block;
@@ -1167,7 +1166,7 @@ a .ga-icon-separator {
   }
 }
 
-#import-wms-popup {
+#import-popup {
   max-width: none;
   max-height: none;
   display: none;
