Iframe copylink changes according to iframe preview

--- a/src/components/share/partials/share.html
+++ b/src/components/share/partials/share.html
@@ -91,8 +91,9 @@
             </span>
           </div>
         </div>
-        <iframe ng-if="loadIframe"
-                ng-src="{{embedValue}}" 
+        <iframe id="previewFrame"
+                ng-if="loadIframe"
+                ng-src="{{embedValue}}"
                 width="{{iframeWidth}}"
                 height="{{iframeHeight}}"
                 frameborder="0">
